<resources>
    <string name="app_name">My Shop</string>
    <string name="email_or_phone">Email</string>
    <string name="password">Password</string>
    <string name="please_enter_your_account_here">Please enter your account here</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgetpassword">ForgetPassword ?</string>
    <string name="welcome">Welcome</string>
    <string name="phone">Phone</string>
    <string name="full_name">Full Name</string>
    <string name="please_wiht">Please Wiht</string>
    <string name="product">Product</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="common_questions">Common Questions</string>
    <string name="change_password">Change Password</string>
    <string name="contacts">Contacts</string>
    <string name="add_address">Add Address</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="home_page">Home Page</string>
    <string name="notification_page">Notification Page</string>
    <string name="favorite_page">Favorite Page</string>
    <string name="setting_page">Setting Page</string>
    <string name="profile_page">Profile Page</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="commonquestions">CommonQuestions</string>
    <string name="detailsproduct">Details Product</string>
    <string name="description">Description</string>
    <string name="category_products">Category Products</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="cart">Shopping Basket</string>
    <string name="add_complaint">Add Complaint</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="comment">Comment</string>
    <string name="more">More</string>
    <string name="update_image">Update Image</string>
    <string name="save">Save</string>
    <string name="about_app">About App</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="rate_app">Rate App</string>
    <string name="shear_app">Shear App</string>
    <string name="logout">LogOut</string>
    <string name="how_we_can_help_you">How we can help you</string>
    <string name="your_own_store_team_is_always_at_your_service_contact_us_on_all_our_websites_we_are_happy_with_you">Your own store team is always at your service. Contact us on all our websites. We are happy with you!!!</string>
    <string name="This_is_the_lowest_quantity_you_can_buy">This is the lowest quantity you can buy</string>
    <string name="list_address">List Address</string>
    <string name="detailed_address">Detailed address</string>
    <string name="city">City</string>
    <string name="governorate">Governorate</string>
    <string name="like_home_or_work_address">Like home or work address</string>
    <string name="update_address">Update Address</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash_money">Cash Money</string>
    <string name="discount_code">Discount Code :</string>
    <string name="Discount">Discount :</string>
    <string name="shipping_information">Shipping information</string>
    <string name="total">Total :</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="select_address">Select Address</string>
    <string name="browse_products">Browse products</string>
    <string name="tu_solicitud_ha_sido_enviada">Tu solicitud ha sido enviada</string>
    <string name="your_request_has_been_successfully_completed_to_find_out_more_about_the_status_of_your_request_go_to_my_orders">Your request has been successfully completed. To find out more about the status of your request, go to My Orders</string>
    <string name="my_order">My Order</string>
    <string name="order_date">Order Date :</string>
    <string name="details">Details</string>
    <string name="cancel">Cancel</string>
    <string name="quantity">Quantity :</string>
    <string name="order_id">Order ID :</string>
    <string name="vat">Vat :</string>
    <string name="final_total">Final Total :</string>
    <string name="payment">Payment :</string>
    <string name="order_details">Order Details</string>
    <string name="yes">Yes</string>
    <string name="the_order_will_be_canceled_are_you_sure_to_cancel">The order will be canceled Are you sure to cancel?</string>
    <string name="warning">warning !!!</string>
    <string name="no">No</string>
    <string name="the_cart_is_empty_you_haven_t_added_any_products_yet">The cart is empty! You haven\'t added any products yet!</string>
    <string name="go_shopping">Go Shopping</string>
    <string name="shopping_basket">Shopping Basket</string>
    <string name="new_password">New Password</string>
    <string name="change_the_password_by_typing_the_new_password_then_re_typing_the_password_again">Change the password by typing the new password, then re-typing the password again</string>
    <string name="old_password">Old Password</string>
    <string name="identity_confirmation">Identity confirmation</string>
    <string name="then_enter_the_code_that_we_sent_you_via_e_mail_to_confirm_your_identity_and_then_change_the_password">Enter the code we sent you via email to confirm your identity</string>
    <string name="verification">Verification</string>
    <string name="resend">Resend</string>
    <string name="change_the_password">Change the password</string>
    <string name="forgot_your_password">Forgot your password</string>
    <string name="fill_in_this_information_to_receive_a_new_password_activation_code">Fill in this information to receive a new password activation code</string>
    <string name="email">Email</string>
    <string name="Code">code</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="are_you_sure_to_sign_out_of_the_app">Are you sure to sign out of the app???</string>

</resources>