<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:gravity="center"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/textTitle"
        android:textSize="@dimen/_18ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_account_here"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_12ssp" />

    <EditText
        android:id="@+id/fragment_login_tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_edit_text_color"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_25sdp"
         android:layout_marginEnd="@dimen/_25sdp"
        android:hint="@string/email_or_phone"
        android:padding="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/_10sdp"
        android:inputType="textEmailAddress"/>


    <EditText
        android:id="@+id/fragment_login_tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_edit_text_color"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:hint="@string/password"
        android:padding="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="@dimen/_10sdp"
        android:inputType="textPassword"/>


    <TextView
        android:id="@+id/fragment_login_tv_forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgetpassword"
        android:textColor="@color/textTitle"
        android:textSize="@dimen/_10ssp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:gravity="start"/>


    <Button
        android:id="@+id/fragment_login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp"
        android:textAllCaps="false"/>


    <Button
        android:id="@+id/fragment_login_btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_edit_text"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:textAllCaps="false"
        android:text="@string/register"
        android:textColor="@color/backrund"
        android:textSize="@dimen/_12ssp"/>





        </LinearLayout>



    </ScrollView>

</LinearLayout>