<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".ui.activity.setting.address.addAdderss.AddAddressActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/activity_add_complaint_iv_bake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_complaint"
            android:gravity="center"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14ssp" />



    </androidx.appcompat.widget.Toolbar>




        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">






                <EditText
                    android:id="@+id/activity_add_complaint_tv_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:hint="@string/full_name"
                    android:padding="@dimen/_10sdp"
                    android:drawableStart="@drawable/ic_user"
                    android:drawablePadding="@dimen/_10sdp"
                    android:inputType="text"
                    android:background="@drawable/shape_edit_text_color"/>



                <EditText
                    android:id="@+id/activity_add_complaint_tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:hint="@string/email_or_phone"
                    android:padding="@dimen/_10sdp"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/_10sdp"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/shape_edit_text_color"/>




                <EditText
                    android:id="@+id/activity_add_complaint_tv_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:hint="@string/phone"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/shape_edit_text_color"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="@dimen/_10sdp"
                    android:inputType="phone"/>


                <EditText
                    android:id="@+id/activity_add_complaint_tv_message"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_180sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:drawablePadding="@dimen/_10sdp"
                    android:gravity="top"
                    android:hint="@string/message"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/shape_edit_text_color"/>

                <Button
                    android:id="@+id/activity_add_complaint_btn_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_button"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_40sdp"
                    android:layout_marginEnd="@dimen/_40sdp"
                    android:text="@string/send"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12ssp"
                    android:textAllCaps="false"/>


            </LinearLayout>



        </ScrollView>

    </LinearLayout>



