<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">





    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">




        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:src="@drawable/ic_don"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_bold"
            android:textSize="@dimen/_16ssp"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:textColor="@color/black"
            android:text="@string/tu_solicitud_ha_sido_enviada"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_regular"
            android:text="@string/your_request_has_been_successfully_completed_to_find_out_more_about_the_status_of_your_request_go_to_my_orders"
            android:gravity="center"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:textSize="@dimen/_12ssp" />




        <Button
            android:id="@+id/activity_congratulation_btn_shape_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_60sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/shape_button"
            android:text="@string/browse_products"
            android:textColor="@android:color/white"
            android:textAllCaps="false"/>


    </LinearLayout>

</LinearLayout>